got an initial login UI screen

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
-  yooyoyyo
-  <div id="app-container">
-    
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/popup.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Price Tracker</title>
+  </head>
+  <body>
+    <section id="header">
+      <img src="img/logo.png" width="150px" height="150px">
+      <div id="title">Price Tracker</div>
+      <button style="font-size:24px"><i class="fa fa-gear"></i></button>
+    </section>
+    <form>
+      <input type="text" id="email" name="email" placeholder="Email" required="true"><br>
+      <input type="password" id="password" name="password" placeholder="Password" required="true"><br>
+      <button>Log In</button>
+    </form>
+    <div id="register">
+      Not a Price Tracker user yet? <a href="#">Sign up</a>
+    </div>
+  </body>
 </html>
