--- a/src/options.html
+++ b/src/options.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title></title>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
+
 <body>
-  <p> hi kevin</p>
+    <div id="options-container"></div>
+
 </body>
+
 </html>
