--- a/src/popup.html
+++ b/src/popup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
-    <title>Price Tracker</title>
+    <title>Smart Track</title>
   </head>
   <body>
     <div id="app-container"/>
